@@ -427,6 +427,8 @@ namespace MCForge
                     catch { }
                     if (Server.lava.active) SendMessage("There is a &aLava Survival " + Server.DefaultColor + "game active! Join it by typing /ls go");
                     extraTimer.Dispose();
+                    try { Waypoint.Load(this); if (Waypoints.Count >= 1) { this.SendMessage("Loaded Waypoints"); } }
+                    catch { }
                 };
 
                 afkTimer.Elapsed += delegate
@@ -4125,7 +4127,7 @@ namespace MCForge
                 public byte rotx;
                 public byte roty;
                 public string name;
-                public Level level;
+                public string lvlname;
             }
             public static WP Find(string name, Player p)
             {
@@ -4146,15 +4148,22 @@ namespace MCForge
             {
                 if (Exists(waypoint, p))
                 {
+                    
                     WP wp = Find(waypoint, p);
+                    Level lvl = Level.Find(wp.lvlname);
                     if (wp != null)
                     {
-                        if (p.level != wp.level)
+                        if (lvl != null)
                         {
-                            Command.all.Find("goto").Use(p, wp.level.name);
-                            while (p.Loading) { Thread.Sleep(250); }
+                            if (p.level != lvl)
+                            {
+                                Command.all.Find("goto").Use(p, lvl.name);
+                                while (p.Loading) { Thread.Sleep(250); }
+                            }
+                            unchecked { p.SendPos((byte)-1, wp.x, wp.y, wp.z, wp.rotx, wp.roty); }
+                            Player.SendMessage(p, "Sent you to waypoint");
                         }
-                        unchecked { p.SendPos((byte)-1, wp.x, wp.y, wp.z, wp.rotx, wp.roty); }
+                        else { Player.SendMessage(p, "The map that that waypoint is on isn't loaded right now (" + wp.lvlname + ")"); return; }
                     }
                 }
             }
@@ -4169,9 +4178,10 @@ namespace MCForge
                     wp.rotx = p.rot[0];
                     wp.roty = p.rot[1];
                     wp.name = waypoint;
-                    wp.level = p.level;
+                    wp.lvlname = p.level.name;
                 }
                 p.Waypoints.Add(wp);
+                Save();
             }
 
             public static void Update(string waypoint, Player p)
@@ -4185,15 +4195,17 @@ namespace MCForge
                     wp.rotx = p.rot[0];
                     wp.roty = p.rot[1];
                     wp.name = waypoint;
-                    wp.level = p.level;
+                    wp.lvlname = p.level.name;
                 }
                 p.Waypoints.Add(wp);
+                Save();
             }
 
             public static void Remove(string waypoint, Player p)
             {
                 WP wp = Find(waypoint, p);
                 p.Waypoints.Remove(wp);
+                Save();
             }
 
             public static bool Exists(string waypoint, Player p)
@@ -4207,6 +4219,66 @@ namespace MCForge
                     }
                 }
                 return exists;
+            }
+
+            public static void Load(Player p)
+            {
+                if (File.Exists("extra/Waypoints/" + p.name + ".save"))
+                {
+                    using (StreamReader SR = new StreamReader("extra/Waypoints/" + p.name + ".save"))
+                    {
+                        bool failed = false;
+                        string line;
+                        while (SR.EndOfStream == false)
+                        {
+                            line = SR.ReadLine().ToLower().Trim();
+                            if (!line.StartsWith("#") && line.Contains(":"))
+                            {
+                                failed = false;
+                                string[] LINE = line.ToLower().Split(':');
+                                WP wp = new WP();
+                                try
+                                {
+                                    wp.name = LINE[0];
+                                    wp.lvlname = LINE[1];
+                                    wp.x = ushort.Parse(LINE[2]);
+                                    wp.y = ushort.Parse(LINE[3]);
+                                    wp.z = ushort.Parse(LINE[4]);
+                                    wp.rotx = byte.Parse(LINE[5]);
+                                    wp.roty = byte.Parse(LINE[6]);
+                                }
+                                catch
+                                {
+                                    Server.s.Log("Couldn't load a Waypoint!");
+                                    failed = true;
+                                }
+                                if (failed == false)
+                                {
+                                    p.Waypoints.Add(wp);
+                                }
+                            }
+                        }
+                        SR.Dispose();
+                    }
+                }
+            }
+
+            public static void Save()
+            {
+                foreach (Player p in Player.players)
+                {
+                    if (p.Waypoints.Count >= 1)
+                    {
+                        using (StreamWriter SW = new StreamWriter("extra/Waypoints/" + p.name + ".save"))
+                        {
+                            foreach (WP wp in p.Waypoints)
+                            {
+                                SW.WriteLine(wp.name + ":" + wp.lvlname + ":" + wp.x + ":" + wp.y + ":" + wp.z + ":" + wp.rotx + ":" + wp.roty);
+                            }
+                            SW.Dispose();
+                        }
+                    }
+                }
             }
         }
         public bool EnoughMoney(int amount)
